--- a/AUTHORS
+++ b/AUTHORS
@@ -13,3 +13,4 @@ Author: Prem Shankar Kumar <meprem@gmail.com>
 Author: Arnaud Kapp <kapp.arno@gmail.com>
 Author: Lionel Orry <lionel.orry@gmail.com>
 Author: Jakub Piskorz <piskorzj@gmail.com>
+Author: Tomoyuki Harada <harada.tomoyuki03@gmail.com>
